forslag til kode fra semesterprojekt 2 indsat

--- a/src/main/webapp/Resultatside.css
+++ b/src/main/webapp/Resultatside.css
@@ -28,4 +28,18 @@ h3{
 
 }
 
+.chartWrap{
+    position: relative;
+}
+.chartWrap > canvas {
+    position: absolute;
+    left: 0;
+    top: 0;
+    pointer-events: none;
+}
 
+.chartArea{
+    width: 1500px;
+    height: 400px;
+    overflow-x: scroll;
+}
