--- a/src/main/webapp/Chart - undervisning/CanvasTest.css
+++ b/src/main/webapp/Chart - undervisning/CanvasTest.css
@@ -1,19 +1,19 @@
-.chartWrapper {
+/*.chartWrapper {
     position: relative;
 }
-/*
+
 .chartWrapper > canvas {
     position: absolute;
     left: 0;
     top: 0;
     pointer-events:none;
 }
-*/
+
 .chartAreaWrapper {
     position: relative;
     height: 300px;
-    /*
+
     width: 600px;
     overflow-x: scroll;
-*/
-}
+
+}*/
