--- a/src/main/webapp/Chart - undervisning/test2.css
+++ b/src/main/webapp/Chart - undervisning/test2.css
@@ -17,7 +17,7 @@ section.range-slider input[type="range"] {
     overflow: hidden;
     left: 0;
     top: 50px;
-    width: 700px;
+    width: 100%;
     outline: none;
     height: 20px;
     margin: 0;
