--- a/src/main/webapp/Importside.css
+++ b/src/main/webapp/Importside.css
@@ -2,14 +2,15 @@
 body {
     font-family: "Times New Roman", serif;
 }
+
 /*tekstfelt*/
-.tekstfelt{
+.tekstfelt {
     display: block;
     position: relative;
     width: 100%;
     max-width: 400px;
     height: 50%;
-    left:30%;
+    left: 30%;
     padding: 80px 40px 40px;
     background: grey;
     border-radius: 10px;
@@ -19,7 +20,7 @@ body {
 
 /* Dropdown Button */
 .dropdownbtn {
-    background-color: rgb(11,71,144);
+    background-color: rgb(11, 71, 144);
     color: white;
     padding: 16px;
     font-size: 16px;
@@ -62,7 +63,7 @@ body {
     position: absolute;
     background-color: #f1f1f1;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
 }
 
@@ -75,7 +76,11 @@ body {
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content label:hover {background-color: #ddd}
+.dropdown-content label:hover {
+    background-color: #ddd
+}
 
 /* Show the dropdown menu */
-.show {display:block;}
+.show {
+    display: block;
+}
