--- a/src/main/webapp/Login.css
+++ b/src/main/webapp/Login.css
@@ -27,7 +27,7 @@ body {
     max-width: 380px;
     height: 60%;
     padding: 80px 40px 40px;
-    background: rgba(0,0,0,0.8); /* baggrunds farven*/
+    background: rgba(0, 0, 0, 0.8); /* baggrunds farven*/
     border-radius: 10px;
     color: white;
 }
@@ -39,6 +39,7 @@ body {
     margin-bottom: 2rem;
     color: white;
 }
+
 .form .input-gruppe {
     position: relative;
 }
@@ -79,10 +80,10 @@ body {
 /* rest og login knappen */
 .knap {
     font-family: "Times New Roman", serif;
-    display:inline-block;
+    display: inline-block;
     outline: none;
-    border: 1px solid rgb(11,71,144);
-    background-color: rgb(11,71,144);
+    border: 1px solid rgb(11, 71, 144);
+    background-color: rgb(11, 71, 144);
     color: white;
     font-size: 1rem;
     text-transform: uppercase;
@@ -92,7 +93,9 @@ body {
     cursor: pointer;
 }
 
-.knap:hover {background-color: dodgerblue;}
+.knap:hover {
+    background-color: dodgerblue;
+}
 
 .knap:active {
     background-color: dodgerblue;;
@@ -101,7 +104,7 @@ body {
 }
 
 /* øje icon */
-i{
+i {
     color: gray;
     position: absolute;
     cursor: pointer;
