--- a/src/main/webapp/Resultatside.css
+++ b/src/main/webapp/Resultatside.css
@@ -30,15 +30,13 @@ h3 {
 .chartWrap {
     position: relative;
     width: 80%;
+    height: 500px;
     margin-bottom: 30px;
+    margin-left: 10%;
 }
 
-.chartWrap > canvas {
-    position: absolute;
-    margin-top: 100px;
-    left: 10%;
-    top: 5%;
-}
+
+
 
 section.range-slider {
     position: relative;
@@ -59,7 +57,7 @@ section.range-slider input[type="range"] {
     box-shadow: inset 0 1px 0 0 #cdc6c6, inset 0 -1px 0 0 #d9d4d4;
     -webkit-box-shadow: inset 0 1px 0 0 #cdc6c6, inset 0 -1px 0 0 #d9d4d4;
     overflow: hidden;
-    left: 10%;
+    left: 0;
     top: 50px;
     width: 100%;
     outline: none;
