--- a/src/main/webapp/Resultatside.css
+++ b/src/main/webapp/Resultatside.css
@@ -25,6 +25,12 @@ h3 {
     font-weight: bolder;
 }
 
+.searchField{
+    position: relative;
+    width: 60%;
+    font-size: 18px;
+}
+
 /* chart relateret CSS*/
 
 .chartWrap {
@@ -34,8 +40,6 @@ h3 {
     margin-bottom: 30px;
     margin-left: 10%;
 }
-
-
 
 
 section.range-slider {
