--- a/src/main/webapp/Importside.css
+++ b/src/main/webapp/Importside.css
@@ -20,7 +20,8 @@ body {
 
 /* Dropdown Button */
 .dropdownbtn {
-    background-color: rgb(11, 71, 144);
+    /*background-color: rgb(11, 71, 144);*/
+    background-color: #3585DA;
     color: white;
     padding: 16px;
     font-size: 16px;
@@ -29,8 +30,10 @@ body {
 }
 
 .button1 {
-    border: 1px solid rgb(11, 71, 144);
-    background-color: rgb(11, 71, 144);
+    /*border: 1px solid rgb(11, 71, 144);*/
+    border: #3585DA;
+    background-color: #3585DA;
+    /*background-color: rgb(11, 71, 144);*/
     color: white;
     height: 30px;
     text-decoration: underline;
