--- a/src/main/webapp/Login.css
+++ b/src/main/webapp/Login.css
@@ -6,8 +6,7 @@
 
 /* baggrund. tog bare et random billede kan altid ændres */
 body {
-/* background: url('IMG/dna-3539309_1920.jpg') no-repeat center;*/
-    background: url('IMG/happybackground1.jpg') no-repeat center;
+    background: url('IMG/Newbackground.jpg') no-repeat center;
     background-size: cover;
     font-family: "Times New Roman", serif;
 }
@@ -29,7 +28,7 @@ body {
     height: 60%;
     padding: 80px 40px 40px;
     background: rgba(0, 0, 0, 0.8); /* baggrunds farven*/
-    border-radius: 10px;
+    border-radius: 20px;
     color: white;
 }
 
@@ -84,24 +83,32 @@ body {
     display: inline-block;
     outline: none;
     border: 1px solid rgb(11, 71, 144);
-    background-color: rgb(11, 71, 144);
+    /*background-color: dodgerblue;
+    background-color: #A4C3D2;*/
+    background-color: #3585DA;
     color: white;
     font-size: 1rem;
     text-transform: uppercase;
     letter-spacing: 1px;
     padding: 10px 45px;
-    border-radius: 5px;
+    border-radius: 20px;
     cursor: pointer;
+    position: center;
+    align-items: center;
 }
 
 .knap:hover {
-    background-color: dodgerblue;
+    /*background-color: dodgerblue;
+        background-color: #A4C3D2;*/
+    background-color: #3585DA;
 }
 
 .knap:active {
-    background-color: dodgerblue;;
-    box-shadow: 0 5px #666;
-    transform: translateY(4px);
+    /*background-color: dodgerblue;
+    background-color: #A4C3D2;*/
+    background-color: #3585DA;
+box-shadow: 0 5px #666;
+transform: translateY(4px);
 }
 
 /* øje icon */
