--- a/src/main/webapp/Startside.css
+++ b/src/main/webapp/Startside.css
@@ -1,4 +1,3 @@
-
 * {
     box-sizing: border-box;
 }
@@ -33,14 +32,17 @@ body {
 }
 
 .hotbar a {
-    background-color: rgb(11, 71, 144) /*rgb(162,221,240)*/;
+    /*background-color: rgb(11, 71, 144) /*rgb(162,221,240)*/;
+    /*background-color: dodgerblue;
+    background-color: #A4C3D2;*/
+    background-color: #3585DA;
     display: inline-block;
     color: white;
     font-weight: bold;
     text-align: center;
     border: 5px;
     padding: 5px;
-    border-radius: 3px;
+    border-radius: 20px;
     font-family: 'Times New Roman', sans-serif;
 }
 
@@ -69,10 +71,13 @@ body {
 
 .mellemsted div {
     font-weight: bold;
-    background-color: rgb(11, 71, 144) /*rgb(162,221,240)*/;
+    /*background-color: rgb(11, 71, 144) /*rgb(162,221,240)*/;
+    /*background-color: dodgerblue;
+    background-color: #A4C3D2;*/
+    background-color: #3585DA;
     text-align: center;
     padding: 5px;
-    border-radius: 3px;
+    border-radius: 20px;
 }
 
 .mellemsted div a {
@@ -91,7 +96,8 @@ body {
     margin: 0;
     justify-content: center;
     align-items: center;
-    background-color: gray;
+    background-color: lightgray;
+    border-radius: 20px;
 }
 
 .autotiderbar {
@@ -104,12 +110,18 @@ body {
     font-weight: 400;
     font-size: 2em;
     color: white;
-    background: rgb(11, 71, 144);
+    /*background-color: rgb(11, 71, 144) /*rgb(162,221,240)*/;
+    /*background-color: dodgerblue;
+    background-color: #A4C3D2;*/
+    background-color: #3585DA;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
 }
 
 .autotider {
     font-size: 25px;
-    background-color: gray;
+    background-color: lightgray;
+    border-radius: 20px;
 }
 
 .autoname {
@@ -128,7 +140,8 @@ body {
     height: 40rem;
     justify-content: center;
     align-items: center;
-    background-color: gray;
+    background-color: lightgray;
+    border-radius: 20px;
 }
 
 .actualdate {
@@ -139,7 +152,10 @@ body {
     align-items: center;
     text-align: center;
     color: white;
-    background: rgb(11, 71, 144);
+    /*background-color: rgb(11, 71, 144) /*rgb(162,221,240)*/;
+    /*background-color: dodgerblue;
+    background-color: #A4C3D2;*/
+    background-color: #3585DA;
 }
 
 .actualdate div {
@@ -196,7 +212,10 @@ body {
 }
 
 .today {
-    background-color: rgb(11, 71, 144);
+    /*background-color: rgb(11, 71, 144) /*rgb(162,221,240)*/;
+    /*background-color: dodgerblue;
+    background-color: #A4C3D2;*/
+    background-color: #3585DA;
     color: white;
     font-weight: bolder;
 }
@@ -240,7 +259,8 @@ body {
     font-weight: bold;
     color: white;
     padding: 1em;
-    background-color: rgb(11, 71, 144);
+    /*background-color: rgb(11, 71, 144) /*rgb(162,221,240)*/;
+    background-color: #3585DA;
     border-radius: 3px;
 }
 
@@ -265,11 +285,14 @@ body {
 }
 
 .button1 {
-    border: 1px solid rgb(11, 71, 144);
+    /*border: 1px solid rgb(11, 71, 144);
     background-color: rgb(11, 71, 144);
+    background-color: rgb(11, 71, 144) /*rgb(162,221,240)*/;
+    background-color: #3585DA;
     color: white;
     height: 30px;
     font-family: "Times New Roman", sans-serif;
+    border-radius: 15px;
 }
 
 .button1:hover {
@@ -335,15 +358,20 @@ textarea {
 }
 
 .button {
-    border: 1px solid rgb(11, 71, 144);
-    background-color: rgb(11, 71, 144);
+    /*border: 1px solid rgb(11, 71, 144);*/
+    border: 10px solid #3585DA;
+    /*background-color: rgb(11, 71, 144);*/
+    background-color: #3585DA;
+
     color: white;
     font-size: 12px;
     font-weight: bold;
     letter-spacing: 1px;
     text-transform: uppercase;
     height: 30px;
-    width: 49%
+    width: 49%;
+
+
 }
 
 .button:hover {
@@ -359,7 +387,8 @@ textarea {
 /* Fra website */
 
 .open-button {
-    background-color: rgb(11,71,144) ;
+    /*background-color: rgb(11, 71, 144);*/
+    background-color: #3585DA;
     color: white;
     padding: 16px 20px;
     border: none;
@@ -410,8 +439,5 @@ textarea {
 .form-container .btn:hover, .open-button:hover {
     opacity: 1;
 }
-
-
-
 
 
