--- a/src/main/webapp/Importside.css
+++ b/src/main/webapp/Importside.css
@@ -49,117 +49,13 @@ body {
     transform: translateY(4px);
 }
 
-/* Dropdown button on hover & focus */
-.dropbtn:hover, .dropbtn:focus {
-    background-color: dodgerblue;
-}
-
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-/* Dropdown Content (Hidden by Default) */
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-}
-
-/* Links inside the dropdown */
-.dropdown-content label {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content label:hover {
-    background-color: #ddd
-}
-
-/* Show the dropdown menu */
-.show {
-    display: block;
-}
-
-/* til radiobuttons fra: https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_custom_radio  */
-/* The container */
-.container {
-    display: block;
-    position: relative;
-    padding-left: 35px;
-    margin-bottom: 12px;
-    cursor: pointer;
-    font-size: 22px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
-/* Hide the browser's default radio button */
-.container input {
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
-}
-
-/* Create a custom radio button */
-.checkmark {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 25px;
-    width: 25px;
-    background-color: #eee;
-    border-radius: 50%;
-}
-
-/* On mouse-over, add a grey background color */
-.container:hover input ~ .checkmark {
-    background-color: #ccc;
-}
-
-/* When the radio button is checked, add a blue background */
-.container input:checked ~ .checkmark {
-    background-color: #2196F3;
-}
-
-/* Create the indicator (the dot/circle - hidden when not checked) */
-.checkmark:after {
-    content: "";
-    position: absolute;
-    display: none;
-}
-
-/* Show the indicator (dot/circle) when checked */
-.container input:checked ~ .checkmark:after {
-    display: block;
-}
-
-/* Style the indicator (dot/circle) */
-.container .checkmark:after {
-    top: 9px;
-    left: 9px;
-    width: 8px;
-    height: 8px;
-    border-radius: 50%;
-    background: white;
-}
-
-
 /* chart relateret CSS*/
 
 .chartWrap1 {
     position: relative;
     width: 80%;
     height: 500px;
+    margin-top: 30px;
     margin-bottom: 30px;
     margin-left: 10%;
 }
@@ -167,6 +63,7 @@ body {
     position: relative;
     width: 80%;
     height: 500px;
+    margin-top: 30px;
     margin-bottom: 30px;
     margin-left: 10%;
 }
@@ -174,6 +71,7 @@ body {
      position: relative;
      width: 80%;
      height: 500px;
+    margin-top: 30px;
      margin-bottom: 30px;
      margin-left: 10%;
  }
