--- a/src/main/webapp/Importside.css
+++ b/src/main/webapp/Importside.css
@@ -1,78 +1,56 @@
 /* baggrund */
 body {
     font-family: "Times New Roman", serif;
+    text-align: center;
 }
 
 /*tekstfelt*/
 .tekstfelt {
     display: block;
     position: relative;
-    width: 100%;
+    width: 80%;
     max-width: 400px;
     height: 50%;
-    left: 30%;
     padding: 80px 40px 40px;
-    background: grey;
+    background: rgba(128, 128, 128, 0.48);
     border-radius: 10px;
     color: black;
+    margin: auto;
+    margin-bottom: 20px;
 }
 
-
-/* Dropdown Button */
-.dropdownbtn {
-    /*background-color: rgb(11, 71, 144);*/
-    background-color: #3585DA;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-}
-
-.button1 {
-    /*border: 1px solid rgb(11, 71, 144);*/
-    border: #3585DA;
-    background-color: #3585DA;
-    /*background-color: rgb(11, 71, 144);*/
-    color: white;
-    height: 30px;
-    text-decoration: underline;
-}
-
-.button1:hover {
-    background-color: dodgerblue;
-}
-
-.button1:active {
-    background-color: dodgerblue;
-    box-shadow: 0 5px #666;
-    transform: translateY(4px);
+.import{
+    position: relative;
+    width: 100%;
+    margin: auto;
+    padding: 10px;
 }
 
 /* chart relateret CSS*/
-
 .chartWrap1 {
     position: relative;
     width: 80%;
-    height: 500px;
+    height: 550px;
     margin-top: 30px;
-    margin-bottom: 30px;
+    margin-bottom: 100px;
     margin-left: 10%;
+
 }
 .chartWrap2 {
     position: relative;
     width: 80%;
-    height: 500px;
+    height: 550px;
     margin-top: 30px;
-    margin-bottom: 30px;
+    margin-bottom: 100px;
     margin-left: 10%;
+
 }
 .chartWrap3 {
      position: relative;
      width: 80%;
-     height: 500px;
+     height: 550px;
     margin-top: 30px;
-     margin-bottom: 30px;
+     margin-bottom: 100px;
      margin-left: 10%;
  }
 
