--- a/src/main/webapp/Resultatside.css
+++ b/src/main/webapp/Resultatside.css
@@ -2,7 +2,6 @@
 body {
     margin: 0;
     padding: 0;
-background-color: #90D7FF;
 background-size: cover;
 font-family: sans-serif;
 background-position: center;
@@ -29,6 +28,16 @@ font-weight: bolder;
     position: relative;
     width: 60%;
     font-size: 18px;
+    display: block;
+    max-width: 400px;
+    height: 50%;
+    padding: 10px;
+    background: rgba(128, 128, 128, 0.48);
+    border-radius: 10px;
+    color: black;
+    margin: auto;
+    margin-top: 15px;
+    margin-bottom: 20px;
 }
 
 /* chart relateret CSS*/
