--- a/src/main/webapp/Importside.css
+++ b/src/main/webapp/Importside.css
@@ -11,7 +11,7 @@ body {
     width: 80%;
     max-width: 400px;
     height: 50%;
-    padding: 80px 40px 40px;
+    padding: 10px;
     background: rgba(128, 128, 128, 0.48);
     border-radius: 10px;
     color: black;
