--- a/src/main/webapp/Resultatside.css
+++ b/src/main/webapp/Resultatside.css
@@ -45,7 +45,7 @@ font-weight: bolder;
 .chartWrap {
     position: relative;
     width: 80%;
-    height: 500px;
+    height: 470px;
     margin-bottom: 30px;
     margin-left: 10%;
 }
@@ -56,6 +56,7 @@ section.range-slider {
     /*float: left;*/
     text-align: center;
     width: 100%;
+    margin-bottom: 20px;
 }
 
 /* nedenstående baseret på eksempel fra https://jsfiddle.net/gh7qb4ud/1/ */
