--- a/src/main/webapp/Login.css
+++ b/src/main/webapp/Login.css
@@ -1,3 +1,11 @@
+/**
+
+ * @author ${tidligere kode fra IT3 grp4 & tilføjelser af Caroline}
+
+ * @Date ${}
+
+ */
+
 * {
     margin: 0;
     padding: 0;
