--- a/src/main/webapp/Resultatside.css
+++ b/src/main/webapp/Resultatside.css
@@ -1,3 +1,11 @@
+/**
+
+ * @author ${Magnus, Mia & Caroline}
+
+ * @Date ${jan 2022}
+
+ */
+
 
 body {
     margin: 0;
@@ -22,6 +30,10 @@ margin: 0;
 padding: 0 0 20px;
 text-align: center;
 font-weight: bolder;
+}
+
+.fa_custom {
+    color: #0099CC
 }
 
 .searchField{
